[gd_scene load_steps=12 format=3 uid="uid://cg1uasgjkiile"]

[ext_resource type="Script" path="res://scenes/Player/player.gd" id="1_2723d"]
[ext_resource type="Texture2D" uid="uid://c04y7h854hf0k" path="res://assets/cutielinks_1.png" id="2_bpacy"]
[ext_resource type="Script" path="res://scenes/Player/StateHandler.gd" id="3_30vb3"]
[ext_resource type="Texture2D" uid="uid://d2el70ytw88s5" path="res://assets/Characters.png" id="3_636pv"]
[ext_resource type="Script" path="res://scenes/Player/normal.gd" id="4_b74j0"]
[ext_resource type="Script" path="res://scenes/Player/air.gd" id="5_ru84c"]
[ext_resource type="Script" path="res://scenes/Player/wall.gd" id="6_sn0v2"]
[ext_resource type="Script" path="res://scenes/Player/hanging.gd" id="8_iwk7x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1dds"]
size = Vector2(22, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8euf"]
atlas = ExtResource("3_636pv")
region = Rect2(197, 0, 32, 47)

[sub_resource type="SpriteFrames" id="SpriteFrames_mnb03"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bpacy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8euf")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[node name="player" type="CharacterBody2D"]
z_index = 2
collision_layer = 3
script = ExtResource("1_2723d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_l1dds")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mnb03")
animation = &"new_animation"

[node name="StateHandler" type="Node" parent="."]
script = ExtResource("3_30vb3")

[node name="normal" type="Node" parent="StateHandler"]
script = ExtResource("4_b74j0")

[node name="air" type="Node" parent="StateHandler"]
script = ExtResource("5_ru84c")

[node name="wall" type="Node" parent="StateHandler"]
script = ExtResource("6_sn0v2")

[node name="hanging" type="Node" parent="StateHandler"]
script = ExtResource("8_iwk7x")

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="RightWallRayCast" type="RayCast2D" parent="."]
position = Vector2(0, 16)
target_position = Vector2(21, 0)
collide_with_areas = true

[node name="LeftWallRayCast" type="RayCast2D" parent="."]
position = Vector2(0, 16)
target_position = Vector2(-21, 0)
collide_with_areas = true

[node name="LockedTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="RightWallRayCast2" type="RayCast2D" parent="."]
position = Vector2(0, -32)
target_position = Vector2(21, 0)
collide_with_areas = true

[node name="LeftWallRayCast2" type="RayCast2D" parent="."]
position = Vector2(0, -32)
target_position = Vector2(-21, 0)
collide_with_areas = true

[node name="LedgeJumpProtection" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="LockedTimer" to="." method="_on_locked_timer_timeout"]
